feat(converter): implement abstract conversion interface and initial interactive cli